# ternary-games

./: AGENT.md  Cargo.toml  README.md
docs/: FUTURE-INTEGRATION.md
memory/: JOURNAL.md
src/: best_response.rs  dominant.rs  game_tree.rs  lib.rs  nash.rs  payoff.rs  prisoners.rs
tests/: integration.rs
